[package]
name = "neolink"
description = "A standards-compliant bridge to Reolink IP cameras"
version = "0.7.5"
authors = ["privatecoder"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/privatecoder/neolink"

[workspace]
members = [
  "crates/*",
]

[dependencies]
anyhow = "1.0.70"
base64 = "0.22.0"
byte-slice-cast = {version = "1.2.2", optional = true}
bytes = "1.6.0"
clap = { version = "4.2.2", features = ["derive", "cargo"] }
crossbeam-channel = {version = "0.5.8", optional = true}
env_logger = "0.11.3"
futures = "0.3.28"
gstreamer = {version = "0.25", optional = true}
gstreamer-app = { version = "0.25", features = ["v1_20"], optional = true }
gstreamer-rtsp = { version = "0.25", features = ["v1_20"], optional = true }
gstreamer-rtsp-server = { version = "0.25", features = ["v1_20"], optional = true }
heck = "0.5.0"
log = { version = "0.4.17", features = [ "release_max_level_debug" ] }
neolink_core = { path = "crates/core", version = "0.7.5" }
once_cell = "1.19.0"
quick-xml = { version = "0.40.0", features = ["serialize"] }
regex = "1.7.3"
rumqttc = "0.25.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "io-util", "tracing"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["full", "tracing"] }
toml = "1.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = {version="0.20.0", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[features]
default = ["gstreamer"]
gstreamer = [
  "dep:gstreamer",
  "dep:gstreamer-app",
  "dep:gstreamer-rtsp",
  "dep:gstreamer-rtsp-server",
  "dep:byte-slice-cast",
  "dep:crossbeam-channel"
]
