[package]
name = "neolink_core"
description = "Core services and structure for Reolink IP cameras"
version = "0.7.5"
authors = ["privatecoder", "George Hilliard <thirtythreeforty@gmail.com>", "Andrew King <sheepchaan@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/privatecoder/neolink"

[dependencies]
aes = "0.9.1"
bytes = "1.4.0"
cfb-mode = "0.9.1"
cookie-factory = "0.3.2"
crc32fast = "1.3.2"
crossbeam-channel = "0.5.8"
delegate = "0.13.0"
futures = "0.3.28"
get_if_addrs = "0.5.3"
lazy_static = "1.4.0"
log = "0.4.17"
md5 = "0.8.0"
nom = { version = "8.0.0", features = ["alloc"] }
nom-language = "0.1.0"
quick-xml = { version = "0.40.0", features = ["serialize"] }
rand = "0.10.0"
regex = "1.7.3"
serde = { version = "1.0.106", features = ["derive"] }
socket2 = "0.6.0"
thiserror = "2.0.0"
time = { version = "0.3.36" , features = [ "macros", "parsing", "local-offset" ]}
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync", "time", "net"] }
tokio-util = { version = "0.7.7", features = ["full", "tracing"] }

[dev-dependencies]
assert_matches = "1.5.0"
env_logger = "0.11.0"
indoc = "2.0.1"
